# koto2-SW

./: .gitignore  setup.csh  setup.sh
e14/: CMakeLists.txt  Makefile
e14/cmake/: GsimModule.cmake
e14/config/: Makefile.Darwin  Makefile.Linux  Makefile.e14  Makefile.g4  Makefile.g4bin
e14/document/: Makefile  gsim4.tex
e14/examples/: CMakeLists.txt  PACKAGES
e14/examples/betaDecay/: Makefile  betaDecay64Cu.cc  betaGen90Sr.cc
e14/examples/corrcoeff/: Makefile  REQUIREMENTS  test_corrcoeff.cc  testdata1  testdata2
e14/examples/e14fsim/: Makefile  e14fsimE391MB.cc
e14/examples/e14sim/: 201305.icc  201504.icc  201605.icc  201902.icc  202002.icc  202102.icc  202306.icc  CMakeLists.txt  Makefile  REQUIREMENTS  convertMacro.sh  e14sim.cc
e14/examples/gsim4VolumeFinder/: CMakeLists.txt  GsimE14add.h  GsimE14add.icc  Makefile  REQUIREMENTS  convertSource.sh  gsim4VolumeFinder.cc
e14/examples/gsim4test/: CMakeLists.txt  Makefile  REQUIREMENTS  bar.mac  cosmicRay.mac  dxf.mac  e14.mac  e14_201305.mac  e14_201504.mac  e14_201605.mac  e14_201605_2pi0gam.mac  e14_201605_5gamA.mac  e14_201902.mac  e14_2019_HEPEvt.mac  e14_202002.mac  e14_202102.mac  e14_202306.mac  e14geomtest.mac  e14set.mac  e14toy.mac  e391-debug.mac  e391.mac  e391set.mac  gsim4test.cc  kaon0Lpi0nunu.mac  oglsini.mac  pi0X.mac  test.mac  test1.mac  test10.mac  test11.mac  test12.mac  test13.mac  test14.mac  test15.mac  test16.mac  test17.mac  test2.mac  test3.mac  test4.mac  (+8 more)
e14/examples/kpigg/: CMakeLists.txt  Makefile  REQUIREMENTS  compare.cc  draw.C  kpigg.cc  phaseSpace.cc
e14/examples/mbInefficiency/: CMakeLists.txt  Makefile  REQUIREMENTS  drawIBIneffi.cc  drawMBIneffi.cc  drawMBOnlyIneffi.cc  drawZSBIneffi.cc
e14/examples/novice01/: CMakeLists.txt
e14/examples/pulseGenerator/: CMakeLists.txt  Makefile  README  REQUIREMENTS  pulseGen.cc  pulseView.cc
e14/scripts/: e14.csh  e14.sh  e14tunnel
e14/sources/: CMakeLists.txt  PACKAGES
e14/sources/ana/util/: PACKAGES
e14/sources/ana/util/corrcoeff/: Makefile
e14/sources/ana/util/corrcoeff/corrcoeff/: corrcoeff.h
e14/sources/ana/util/corrcoeff/document/: api.odt
e14/sources/ana/util/corrcoeff/src/: corrcoeff.cc
e14/sources/sim/: CMakeLists.txt  PACKAGES
e14/sources/sim/fsim/: CMakeLists.txt
e14/sources/sim/fsim/E14Fsim/: CMakeLists.txt
e14/sources/sim/fsim/E14Fsim/E14Fsim/: E14FsimAnalysisManager.h  E14FsimBHPVModule.h  E14FsimCCModule.h  E14FsimCSIModule.h  E14FsimCluster.h  E14FsimE391MBInefficiency.h  E14FsimFunction.h  E14FsimGenParticleModule.h  E14FsimIBInefficiency.h  E14FsimInefficiency.h  E14FsimMBProposalInefficiency.h  E14FsimMBwithBCV300keVInefficiency.h  E14FsimVeto.h  E14FsimVetoModule.h  E14FsimZSBInefficiency.h
e14/sources/sim/fsim/E14Fsim/src/: E14FsimAnalysisManager.cc  E14FsimBARModule.cc  E14FsimBHPVModule.cc  E14FsimCCModule.cc  E14FsimCSIModule.cc  E14FsimCluster.cc  E14FsimE391MBInefficiency.cc  E14FsimFunction.cc  E14FsimGenParticleModule.cc  E14FsimIBInefficiency.cc  E14FsimInefficiency.cc  E14FsimMBProposalInefficiency.cc  E14FsimMBwithBCV300keVInefficiency.cc  E14FsimPersistencyManager.cc  E14FsimVetoModule.cc  E14FsimZSBInefficiency.cc
e14/sources/sim/gsim4/: CMakeLists.txt  PACKAGES
e14/sources/sim/gsim4/GsimData/: CMakeLists.txt
e14/sources/sim/gsim4/GsimData/GsimData/: GsimDetectorEventData.h  GsimDetectorHitData.h  GsimDigiData.h  GsimEventData.h  GsimRunData.h  GsimTimeData.h  GsimTrackData.h
e14/sources/sim/gsim4/GsimData/src/: GsimDetectorEventData.cc  GsimRandData.cc  GsimTimeData.cc
e14/sources/sim/gsim4/GsimDetector/: CMakeLists.txt
e14/sources/sim/gsim4/GsimDetector/GsimDetector/: GsimBox.h  GsimBoxWithAHole.h  GsimBoxWithoutABox.h  GsimCone.h  GsimPolycone2.h  GsimPolyhedra2.h  GsimPolyhedra2WithASquareHole.h  GsimTetraExtruded2.h  GsimTrap.h  GsimTrapWithHoles.h  GsimTube.h  GsimTubeWithAHole.h
e14/sources/sim/gsim4/GsimDetector/src/: GsimBox.cc  GsimBoxWithAHole.cc  GsimBoxWithoutABox.cc  GsimCone.cc  GsimPolycone2.cc  GsimPolyhedra2.cc  GsimPolyhedra2WithASquareHole.cc  GsimTetraExtruded2.cc  GsimTrap.cc  GsimTrapWithHoles.cc  GsimTube.cc  GsimTubeWithAHole.cc
e14/sources/sim/gsim4/GsimE14Detector/: CMakeLists.txt
e14/sources/sim/gsim4/GsimE14Detector/GsimE14Detector/: GsimE14.h  GsimE14BCV.h  GsimE14BHCV.h  GsimE14BHGC.h  GsimE14BHPV.h  GsimE14BHPVold.h  GsimE14BHTS.h  GsimE14BPCV.h  GsimE14CBAR.h  GsimE14CC03.h  GsimE14CC04.h  GsimE14CC05.h  GsimE14CC06.h  GsimE14CSI.h  GsimE14CV.h  GsimE14CsIBackPlate.h  GsimE14CsICover.h  GsimE14DCV.h  (+13 more)
e14/sources/sim/gsim4/GsimE14Spectrum/: CMakeLists.txt
e14/sources/sim/gsim4/GsimE14Step2Detector/: CMakeLists.txt
e14/sources/sim/gsim4/GsimE14Step2Spectrum/: CMakeLists.txt  Makefile
e14/sources/sim/gsim4/GsimE391Detector/: CMakeLists.txt
e14/sources/sim/gsim4/GsimE391Spectrum/: CMakeLists.txt
e14/sources/sim/gsim4/GsimGun/: CMakeLists.txt
e14/sources/sim/gsim4/GsimKOTOIIDetector/: CMakeLists.txt
e14/sources/sim/gsim4/GsimKernel/: CMakeLists.txt
e14/sources/sim/gsim4/GsimMaterial/: CMakeLists.txt
e14/sources/sim/gsim4/GsimParticle/: CMakeLists.txt  REQUIREMENTS
e14/sources/sim/gsim4/GsimPersistency/: CMakeLists.txt
e14/sources/sim/gsim4/GsimPhysicsList/: CMakeLists.txt
e14/sources/sim/gsim4/GsimSpectrum/: CMakeLists.txt  Makefile  REQUIREMENTS
e14/sources/sim/gsim4/GsimTools/: CMakeLists.txt
e14/sources/sim/gsim4/GsimUIbash/: CMakeLists.txt
e14/sources/sim/gsim4/GsimUserDetector/: CMakeLists.txt
e14/sources/sim/waveform/: CMakeLists.txt
e14/sources/sim/waveform/PulseGenerator/: CMakeLists.txt  Makefile
e14/sources/version/: CMakeLists.txt  PACKAGES
e14/sources/version/E14Version/: CMakeLists.txt  Makefile
e14/sources/version/E14Version/E14Version/: E14Version.h
e14/tutorial/: README
(+261 files in other folders)
