add_subdirectory(GsimData)
add_subdirectory(GsimPersistency)
add_subdirectory(GsimTools)
add_subdirectory(GsimUIbash)
add_subdirectory(GsimPhysicsList)
add_subdirectory(GsimParticle)
add_subdirectory(GsimKernel)
add_subdirectory(GsimMaterial)
add_subdirectory(GsimGun)
add_subdirectory(GsimSpectrum)
add_subdirectory(GsimE391Spectrum)
add_subdirectory(GsimE14Spectrum)
add_subdirectory(GsimDetector)
add_subdirectory(GsimUserDetector)
add_subdirectory(GsimE391Detector)
add_subdirectory(GsimE14Detector)
add_subdirectory(GsimE14Step2Detector)
add_subdirectory(GsimE14Step2Spectrum)
add_subdirectory(GsimKOTOIIDetector)
